[project]
name = 'chartpy'
version = "0.0.0"      # do not change by hand!
# todo: fxi description
description = "finmarketpy is a Python based library for backtesting trading strategies"
# Please add authors and correct the email...
authors = [{name='Saeed Aman', email= 'saeed@cuemacro.com'}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bokeh>=3.4.3",
    "bqplot>=0.12.44",
    "bs4>=0.0.2",
    "chart-studio>=1.1.0",
    "dash>=2.9.3",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "dataframe-image>=0.2.7",
    "flask>=3.1.0",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "mpld3>=0.5.10",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "plotly>=6.0.0",
    "reportlab>=4.3.1",
    "twython>=3.9.1",
    "vispy>=0.14.3",
]
#dependencies = [
#    "blosc>=1.11.2",
#    "chartpy",
#    "financepy==0.310",
#    "findatapy",
#    "matplotlib>=3.9.4",
#    "numba>=0.60.0",
#    "numpy>=2.0.2",
#    "pandas>=2.2.3",
#    "scikit-learn>=1.6.1",
#    "seasonal>=0.3.1",
#]
# todo: keywords
#keywords = [
#    "trading", "markets", "currencies", "pandas", "data", "Bloomberg", "tick", "stocks", "equities"
#]

[project.urls]
repository = "https://github.com/cuemacro/chartpy"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "deptry>=0.23.0",
    "marimo>=0.11.16",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chartpy"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "chartpy"
]

[tool.bandit]
exclude_dirs = ["tests"]

#[tool.uv.sources]
#chartpy = { git = "https://github.com/cuemacro/chartpy.git" }
#findatapy = { git = "https://github.com/cuemacro/findatapy.git" }

[tool.deptry.per_rule_ignores]
#DEP001 = ["pyfolio"]       # very dated dependency!
DEP003 = ["chartpy"]
